# test-automation-framework

./: .env.example  .gitignore  CHANGELOG.md  FILE_INDEX.md  FRAMEWORK_COMPLETE.md  LICENSE  Makefile  README.md  START_HERE.md  intelligent_db_assistant.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt
context_library/WebTestingDemo/: checkout_context.md  general_testing_context.md  product_management_context.md  shopping_cart_context.md  user_management_context.md
docs/: ADVANCED_GUIDE.md  API_GUIDE.md  ARCHITECTURE.md  ENCRYPTION_GUIDE.md  INTELLIGENT_DB_ASSISTANT.md  MYSQL_GUIDE.md  QUICKSTART.md  SALESFORCE_GUIDE.md
docs/markdown/: CONTRIBUTING.md  ENCRYPTION_SETUP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  library_structure.md
prompt_library/APITesting/: api_testing_prompt_library.md
prompt_library/WebTestingDemo/: checkout_prompts.md  login_prompts.md  product_details_prompts.md  product_search_prompts.md  registration_prompts.md  shopping_cart_prompts.md  user_profile_prompts.md  validation_prompts.md
scripts/: db_query_api.py  query_deals.py
src/: __init__.py
src/agents/: __init__.py  test_generator.py  test_planner.py
src/api/: __init__.py  test_base.py
src/core/: __init__.py  api_client.py  base_page.py  browser_manager.py
src/mcp_server/: __init__.py  mysql_server.py  server.py
src/pages/: __init__.py  home_page.py  login_page.py
src/salesforce/: __init__.py  api_client.py  auth.py  base_salesforce_page.py
src/utils/: __init__.py  assertions.py  config.py  data_generator.py  encryption.py  logging_config.py  wait_utils.py
test-runners/: __init__.py  base_test_config.py  direct_test_runner.py  fixed_test_runner.py  run_e2e_test.py
tests/: conftest.py
tests/api/: __init__.py  test_api.py
tests/api/CoffeeAPI-TOSCA/: CoffeeAPI.json  Coffee_API_TOSCA.postman_collection.json  README.md  coffee_api.py  requirements.txt
tests/api/PayPalAPI/: PayPal APIs.postman_collection.json  PayPal_API_Test_Cases.json  paypal_api_executor.py
tests/database/: test_mysql.py
tests/salesforce/: __init__.py  test_salesforce.py
tests/web/: __init__.py  test_home.py  test_login.py
tests/web/TricentisWeb/: Registration.JSON  TricentisWeb_E2E_REG-01.py  TricentisWeb_E2E_REG-02.py  TricentisWeb_E2E_REG-03.py  TricentisWeb_E2E_REG-04.py  TricentisWeb_E2E_REG-05.py  TricentisWeb_E2E_REG-06.py  TricentisWeb_E2E_REG-07.py  TricentisWeb_E2E_REG-08.py  TricentisWeb_E2E_REG-09.py  TricentisWeb_E2E_REG-10.py  TricentisWeb_E2E_REG-11.py  TricentisWeb_E2E_REG-12.py  TricentisWeb_E2E_REG-13.py  (+4 more)
utils/: __init__.py  db_query_api.py
